# dlib-android

./: .gitignore  .gitmodules  build.gradle  dependencies.gradle  gradle.properties  settings.gradle
demo-dlib/: build.gradle
demo-dlib/src/main/: AndroidManifest.xml
demo-dlib/src/main/java/com/my/demo/dlib/: SampleOfCamera2ApiActivity1.java  SampleOfFacesAndLandmarksActivity1.java  SampleOfFacesAndLandmarksActivity2.java  SplashScreenActivity.java  StartActivity.java
demo-dlib/src/main/java/com/my/demo/dlib/detector/: DLibFaceAndLandmarksDetector.java
demo-dlib/src/main/java/com/my/demo/dlib/protocol/: IDLibFaceOverlay.java
demo-dlib/src/main/java/com/my/demo/dlib/reactive/: Camera2CaptureSessionObservable.java  Camera2Observable.java
demo-dlib/src/main/java/com/my/demo/dlib/util/: DlibModelHelper.java
demo-dlib/src/main/java/com/my/demo/dlib/view/: FaceLandmarksOverlayView.java
demo-dlib/src/main/res/layout/: activity_sample_of_faces_and_landmarks_2.xml  activity_sample_of_faces_and_landmarks_3.xml  activity_start.xml
dlib/: CMakeLists.txt  build.gradle
dlib/src/androidTest/java/nz/co/colensobbdo/dlib/: ExampleInstrumentedTest.java
dlib/src/main/: AndroidManifest.xml
dlib/src/main/cpp/: CMakeLists.txt  dlib-face-landmarks-detector-jni.cpp  messages.proto
dlib/src/main/cpp/include/proto/: messages.pb.cc  messages.pb.h
dlib/src/main/java/nz/co/colensobbdo/dlib/: DLibFace.java  DLibFace68.java  DLibLandmarks68Detector.java  IDLibFaceDetector.java
dlib/src/main/java/nz/co/colensobbdo/dlib/proto/: Messages.java
dlib/src/main/proto/: compile.sh  messages.proto
gradle/wrapper/: gradle-wrapper.properties
lib-dlib/: .gitignore  build.gradle
lib-dlib/src/main/cpp/: CMakeLists.txt  dlib-face-landmarks-detector-jni.cpp
lib-dlib/src/main/java/com/my/jni/dlib/: DLibLandmarks68Detector.java  IDLibFaceDetector.java
lib-dlib/src/main/java/com/my/jni/dlib/data/: DLibFace68.java
